<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Leave Management Trial</string>
    <string name="logo_content_desc">Logo</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="pf_no">PF No</string>
    <string name="by_mimoh_kulkarni">- By Mimoh Kulkarni</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="tab_text_1">Leave</string>
    <string name="tab_text_2">Home</string>
    <string name="tab_text_3">Profile</string>

    <string name="homepage_title"><b>Divisional Accounts Office, Solapur</b></string>
    <string name="homepage_info_title"><b>Welcome to Divisional Accounts Office,Solapur</b></string>
    <string name="homepage_info"><b> Functions of the Accounts Department :–</b>\nThe Accounts Department of a Railway Administration is mainly responsible for :- \n
<b>•</b> Keeping the accounts of the railway in accordance with the prescribed rules.\n
<b>•</b> The check with reference to rules or orders (Known as “Internal Check”) of transactions affecting the receipts and expenditure of railway.\n
<b>•</b> Prompt settlement of proper claims against the railway.\n
<b>•</b> Tendering, as part of its important functions, advice to the administration whenever required or necessary in all matters involving railway finance.\n
<b>•</b> Compilation of budgets in consultation with other departments and monitoring the budgetary control procedures as may be laid down in the relevant orders and Code rules from time to time.\n
<b>•</b> Generally discharging other management accounting functions such as providing financial data for management reporting, assisting inventory management, participation in purchase/contracting decisions and surveys for major schemes in accordance with the relevant rules and orders.\n
<b>•</b> Seeing that there are no financial irregularities in the transactions of the railway.</string>

    <string name="leave_application">Leave Application</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="pending_leaves">Pending Leaves</string>
    <string name="sanction_leaves">Sanction Leaves</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="hint_pan_no">Pan No</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_department">Department</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="hint_date_of_application">Date of Application</string>
    <string name="hint_since_in_section">Since In Section</string>
    <string name="hint_section">Section</string>
    <string name="hint_category">Category</string>
    <string name="hint_next_increment">Next Increment</string>
    <string name="hint_station_name">Station Name</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="_7th_pay">7th Pay</string>
    <string name="_7th_pay_level">7th Pay Level</string>
    <string name="full_name">Full Name</string>
    <string name="nature_of_leave">Nature of Leave</string>
    <string name="title_activity_leave">LeaveActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_dates">Select Dates</string>
    <string name="leave_from">Leave From</string>
    <string name="leave_to">Leave To</string>
    <string name="purpose_of_leave">Purpose of Leave</string>
    <string name="address_while_on_leave">Address While on Leave</string>
    <string name="headquarter_leave_permission">Headquarter Leave Permission</string>
    <string name="reset">Reset</string>
    <string name="leave_sanction">Leave Sanction</string>
    <string name="leave_period">Leave Period</string>
    <string name="headquarter_leave_period">Headquarter Leave Period</string>
    <string name="forwarded_by">Forwarded By</string>
    <string name="reason_for_remark">Reason for Remark</string>
    <string name="remark">Remark</string>
    <string name="forward_to">Forward To</string>
    <string name="leave_waiting_for_confirmation">Leaves Waiting for Confirmation</string>
    <string name="no_leaves_requests_available">No Leaves Requests Available</string>
    <string name="cl_leave">C L Leave</string>
    <string name="apl_leave">APL Leave</string>
    <string name="ccl_leave">CCL Leave</string>
    <string name="hapl_leave">HAPL Leave</string>
    <string name="rh_leave">RH Leave</string>
    <string name="for_solapur_division">For Solapur Division</string>
    <string name="leave_management">Leave\nManagement</string>
    <string name="welcome_user">Welcome User</string>
    <string name="pending_with">Pending With</string>
    <string name="leave_status">Leave Status</string>
    <string name="close">Close</string>
    <string name="leave_details">Leave Details</string>

    <string name="nothing_to_show">Nothing to show.</string>
    <string name="status_leave_type"><b>Type</b></string>
    <string name="sanction_date"><b>Date</b></string>
    <string name="status_remark"><b>Remark</b></string>
    <string name="sanction_name"><b>Name</b></string>
    <string name="date_of_leave_application">Date of Leave Application</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_sent_to_registered_mobile_number">OTP sent to registered mobile number</string>
    <string name="otp_placeholder">______</string>
    <string name="verify">Verify</string>
    <string name="send_again">Send Again</string>
    <string name="send_otp">Send OTP</string>
    <string name="courtesy_of_mangesh_kulkarni">Courtesy of Mangesh Kulkarni</string>
    <string name="msg_token_fmt">empty</string>
    <string name="channel_id">leave_management</string>

    <array name="natureArray">
        <item>Select</item>
        <item>C L</item>
        <item>APL</item>
        <item>CCl</item>
        <item>HAPL</item>
        <item>RH</item>
        <item>On Duty</item>
        <item>In-Lieu</item>
        <item>Spl CL</item>
    </array>
    <array name="headPermissionArray">
        <item>No</item>
        <item>Yes</item>
    </array>
    <array name="remarks">
        <item>Select</item>
        <item>Sanctioned</item>
        <item>Not Sanctioned</item>
        <item>Forward</item>
    </array>
</resources>