<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@color/login_bk_color"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_weight="9.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/leave_management"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/irlogo"
                    android:contentDescription="@string/logo_content_desc"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/for_solapur_division"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/smallHeaderTextSize"
                android:gravity="center_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIpfno"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:hint="@string/pf_no"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETpfno"
                    style="@style/modifiedEditText"
                    android:inputType="number"
                    android:maxLines="1"
                    android:autofillHints="yes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIpass"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETpass"
                    style="@style/modifiedEditText"
                    android:inputType="textWebPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/CBremember"
                    style="@style/viewParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:checked="true"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/TVforgot"
                    style="@style/viewParent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_alignParentRight="true"
                    android:focusable="true" />

            </RelativeLayout>

            <Button
                android:id="@+id/BTNlogin"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp">

        <TextView
            style="@style/viewParent"
            android:text="@string/by_mimoh_kulkarni"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />


    </RelativeLayout>

</LinearLayout>