<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordChangeActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/headerTextSize"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/applicationMargin"
            android:gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIpfno"
            style="@style/parentProfile"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:hint="@string/pf_no"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETpfno"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:autofillHints="yes" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LLoldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parentProfile"
                android:hint="@string/old_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EToldpass"
                    style="@style/modifiedEditText"
                    android:inputType="textWebPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp">

                <TextView
                    android:id="@+id/TVforgotpass"
                    style="@style/viewParent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true" />

            </RelativeLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parentProfile"
            app:endIconMode="password_toggle"
            android:hint="@string/new_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETnewpassfirst"
                style="@style/modifiedEditText"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:autofillHints="yes" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parentProfile"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_new_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETnewpasssecond"
                style="@style/modifiedEditText"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:autofillHints="yes" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BTNsubmit"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/send_otp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true">

        <TextView
            style="@style/viewParent"
            android:text="@string/by_mimoh_kulkarni"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />


    </RelativeLayout>

</RelativeLayout>